fixed issue with collapsing navbar on smaller screens

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -562,11 +562,7 @@ position: static;
     margin-left: -73px;
   }
 
-  .navbar-collapse .nav{
-    background:white;
-    border-left: 1px dotted #F1E8E8;
-    border-bottom: 1px dotted #F1E8E8;
-  }
+
   .navbar-collapse .nav li{
     width: 94%;
   }
@@ -638,6 +634,20 @@ position: static;
   }
   .pineapple-image{
     height: 306px;
+  }
+}
+
+@media(max-width: 768px){
+    .navbar-collapse .nav{
+    background:white;
+    border-left: 1px dotted #F1E8E8;
+    border-bottom: 1px dotted #F1E8E8;
+  }
+}
+
+@media(min-width: 768px){
+    .navbar-collapse .nav{
+      display:none;
   }
 }
 
